Add HyperDX browser SDK integration for session tracking and observability
- Added HyperDX browser SDK via CDN to index.html
- Created hyperdx.js module with initialization and tracking functions
- Integrated tracking for message sending, agent responses, and errors
- Configured trace propagation to link frontend/backend traces
- Added session replay, console logs, and network capture
- Set up user context and custom action tracking
- Connected to ClickStack OTEL endpoints for data ingestion

--- a/webui/index.html
+++ b/webui/index.html
@@ -97,7 +97,11 @@
         };
     </script>
 
+    <!-- HyperDX Browser SDK -->
+    <script src="https://unpkg.com/@hyperdx/browser@latest/dist/index.js"></script>
+    
     <!-- Load module scripts first -->
+    <script type="module" src="js/hyperdx.js"></script>
     <script type="module" src="js/scheduler.js"></script>
     <script type="module" src="js/speech.js"></script>
     <script type="module" src="js/history.js"></script>
