Fix HyperDX CDN URL: change from /dist/index.js to /build/index.js
- Updated webui/index.html to use correct CDN path for @hyperdx/browser package
- The package.json shows main entry point is build/index.js, not dist/index.js
- This fixes the 404 error when loading HyperDX browser SDK
- Verified the new URL returns HTTP 200 and serves the correct JavaScript file

--- a/webui/index.html
+++ b/webui/index.html
@@ -98,7 +98,7 @@
     </script>
 
     <!-- HyperDX Browser SDK -->
-    <script src="https://unpkg.com/@hyperdx/browser@latest/dist/index.js"></script>
+    <script src="https://unpkg.com/@hyperdx/browser@latest/build/index.js"></script>
     
     <!-- Load module scripts first -->
     <script type="module" src="js/hyperdx.js"></script>
