Fix templating syntax for HyperDX API key injection
- Use double curly braces {{hyperdx_api_key}} instead of single braces
- Matches the replace_placeholders_text function syntax requirements
- Should resolve literal '{hyperdx_api_key}' appearing in authorization header
- Fixes 401 Unauthorized error from incorrect token format

--- a/webui/index.html
+++ b/webui/index.html
@@ -103,9 +103,9 @@
     <!-- Inject server configuration -->
     <script>
         window.AGENT_ZERO_CONFIG = {
-            hyperdxApiKey: '{hyperdx_api_key}',
-            version: '{version_no}',
-            buildTime: '{version_time}'
+            hyperdxApiKey: '{{hyperdx_api_key}}',
+            version: '{{version_no}}',
+            buildTime: '{{version_time}}'
         };
     </script>
     
